# repository-4

./: Cargo.toml  run.sh
src/: configuration_parameters.rs  main.rs
src/process/: mod.rs
test-bed/: FINNONE_EXTRACT.csv  Output.txt  log.txt
